// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Interweave /> autolinks emails 1`] = `
<Interweave
  content="Foo test@domain.com bar"
  emojiData={
    EmojiDataManager {
      "EMOJIS": Object {},
      "EMOTICON_TO_HEXCODE": Object {},
      "SHORTCODE_TO_HEXCODE": Object {},
      "UNICODE_TO_HEXCODE": Object {},
      "data": Array [],
      "flatData": Array [],
      "locale": "en",
    }
  }
  emojiPath=""
  emojiSize="1.25em"
  emojiSource={
    Object {
      "compact": false,
      "error": undefined,
      "locale": "en",
      "version": "latest",
    }
  }
  emojis={Array []}
  filters={Array []}
  matchers={
    Array [
      EmailMatcher {
        "factory": [Function],
        "inverseName": "noEmail",
        "options": Object {},
        "propName": "email",
      },
      UrlMatcher {
        "factory": [Function],
        "inverseName": "noUrl",
        "options": Object {
          "customTLDs": Array [
            "tools",
          ],
          "validateTLD": true,
        },
        "propName": "url",
      },
      EmojiMatcher {
        "data": EmojiDataManager {
          "EMOJIS": Object {},
          "EMOTICON_TO_HEXCODE": Object {},
          "SHORTCODE_TO_HEXCODE": Object {},
          "UNICODE_TO_HEXCODE": Object {},
          "data": Array [],
          "flatData": Array [],
          "locale": "en",
        },
        "factory": null,
        "inverseName": "noEmoji",
        "options": Object {
          "convertEmoticon": false,
          "convertShortcode": true,
          "convertUnicode": true,
          "enlargeThreshold": 3,
          "renderUnicode": false,
        },
        "propName": "emoji",
      },
    ]
  }
  newWindow={true}
  transform={[Function]}
/>
`;

exports[`<Interweave /> autolinks urls 1`] = `
<Interweave
  content="Foo http://test.com bar"
  emojiData={
    EmojiDataManager {
      "EMOJIS": Object {},
      "EMOTICON_TO_HEXCODE": Object {},
      "SHORTCODE_TO_HEXCODE": Object {},
      "UNICODE_TO_HEXCODE": Object {},
      "data": Array [],
      "flatData": Array [],
      "locale": "en",
    }
  }
  emojiPath=""
  emojiSize="1.25em"
  emojiSource={
    Object {
      "compact": false,
      "error": undefined,
      "locale": "en",
      "version": "latest",
    }
  }
  emojis={Array []}
  filters={Array []}
  matchers={
    Array [
      EmailMatcher {
        "factory": [Function],
        "inverseName": "noEmail",
        "options": Object {},
        "propName": "email",
      },
      UrlMatcher {
        "factory": [Function],
        "inverseName": "noUrl",
        "options": Object {
          "customTLDs": Array [
            "tools",
          ],
          "validateTLD": true,
        },
        "propName": "url",
      },
      EmojiMatcher {
        "data": null,
        "factory": null,
        "inverseName": "noEmoji",
        "options": Object {
          "convertEmoticon": false,
          "convertShortcode": true,
          "convertUnicode": true,
          "enlargeThreshold": 3,
          "renderUnicode": false,
        },
        "propName": "emoji",
      },
    ]
  }
  newWindow={true}
  transform={[Function]}
/>
`;
